--- a/index.html
+++ b/index.html
@@ -3,27 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Work Day Scheduler</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-<script>dayjs().format()</script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.6/dayjs.min.js"></script>
 
 </head>
 <body>
-    <div class="container">
-        <div class="time-block" id="hour-9">
-          <textarea class="description"></textarea>
-          <button class="saveBtn">Save</button>
-        </div>
-        <div class="time-block" id="hour-10">
-          <textarea class="description"></textarea>
-          <button class="saveBtn">Save</button>
-        </div>
-        <!-- More time-block elements... -->
-      </div>
+  <header>
+    <h1>Work Day Scheduler</h1>
+    <p>A Scheduler to keep track of your workday tasks and activities.</p>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="./assets/js/script.js"></script> 
+    <!-- Container for the current date -->
+    <div id="current-date"></div>
+  </header>
+
+    <!--time-block 1 -->
+  <div class="time-block" id="time-block-1">
+    <h2>9 AM</h2>
+    <textarea class = 'past'></textarea>
+    <button class="save-button">Save</button>
+  </div>
+
+   <!--time-block 2 -->
+   <div class="time-block" id="time-block-2">
+    <h2>10 AM</h2>
+    <textarea class = 'past'></textarea>
+    <button class="save-button">Save</button>
+</div> 
+
+<!--time-block 3 -->
+  <div class="time-block" id="time-block-3">
+    <h2>11 AM</h2>
+    <textarea class = 'past'></textarea>
+    <button class="save-button">Save</button>
+  </div>
+
+<!--time-block 4 -->
+<div class="time-block" id="time-block-4">
+  <h2>12 PM</h2>
+  <textarea class = 'present'></textarea>
+  <button class="save-button">Save</button>
+</div>
+
+ <!--time-block 5 -->
+  <div class="time-block" id="time-block-5">
+    <h2>1 PM</h2>
+    <textarea class = 'future'></textarea>
+    <button class="save-button">Save</button>
+  </div>
+
+ <!--time-block 6 -->
+<div class="time-block" id="time-block-6">
+  <h2>2 PM</h2>
+  <textarea class = 'future'></textarea>
+  <button class="save-button">Save</button>
+</div>
+
+ <!--time-block 7 -->
+<div class="time-block" id="time-block-7">
+  <h2>3 PM</h2>
+  <textarea class = 'future'></textarea>
+  <button class="save-button">Save</button>
+</div>
+
+ <!--time-block 8 -->
+<div class="time-block" id="time-block-8">
+  <h2>4 PM</h2>
+  <textarea class = 'future'></textarea>
+  <button class="save-button">Save</button>
+</div>
+
+ <!--time-block 9 -->
+<div class="time-block" id="time-block-9">
+  <h2>5 PM</h2>
+  <textarea class = 'future'></textarea>
+  <button class="save-button">Save</button>
+</div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/script.js"></script>
+</script>
 </body>
 </html>
